# reth-exex-examples

oracle/src/: main.rs  oracle.rs
oracle/src/network/: discovery.rs  mod.rs
oracle/src/network/proto/: connection.rs
rollup/: Cargo.toml  test.sh
rollup/src/: config.rs  config.toml  config1.toml  db.rs  execution.rs  main.rs
rollup/src/crypto/: aggregate.rs  data.rs  decrypt.rs  extract.rs  mod.rs
rollup/src/network/: discovery.rs  mod.rs
rollup/src/network/proto/: connection.rs  data.rs  mod.rs
