[package]
name = "rollup"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[dependencies]

# reth
reth-chainspec.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-tracing.workspace = true
reth.workspace = true
reth-trie.workspace = true
reth-discv5.workspace = true
reth-eth-wire.workspace = true
reth-network-api.workspace = true
reth-network-peers.workspace = true
reth-network.workspace = true
reth-rpc-types.workspace = true


# alloy
alloy-consensus = { version = "0.3", features = ["kzg"] }
alloy-rlp = "0.3"
alloy-sol-types.workspace = true
# networking
discv5 = "0.7"
enr = "0.12"
# async
futures-util.workspace = true
tokio.workspace = true
futures.workspace = true
dashmap="6.1.0"
# crypto
hex = "0.4.3"
base64 = {version = "0.22.1"}
hkdf = {version = "0.12.4", default-features = false}
ic_bls12_381 = {version = "0.10.0", default-features = false, features = ["groups","pairings"]}
serde = { version = "1.0", features = ["derive"] }
hmac = {version = "0.12.1", default-features = false}
sha2 = {version = "0.10.8"}
chacha20poly1305 = {version = "0.9.1", default-features = false, features = ["alloc"]}
num-bigint = {version = "0.4", default-features = false}
ark-serialize="0.4.2"
ark-bls12-381="0.4.0"
ark-ec="0.4.2"
ark-ff="0.4.2"
rand="0.8.5"

# config
config="0.14.0"
toml="0.8.19"

# misc
eyre.workspace = true
foundry-blob-explorers = "0.7"
once_cell = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1"

[dev-dependencies]
reth-exex-test-utils.workspace = true 
reth-testing-utils.workspace = true
secp256k1 = "0.29"

